--- a/frontend/src/app/layouts/landing-layout/landing-layout.component.html
+++ b/frontend/src/app/layouts/landing-layout/landing-layout.component.html
@@ -1,3 +1,6 @@
-<main class="min-h-screen bg-red-200">
-    <router-outlet></router-outlet>
+<main
+  class="container relative px-4 mx-auto w-full min-h-screen 
+    bg-white font-poppins text-sm md:text-base pb-5"
+>
+  <router-outlet></router-outlet>
 </main>
