--- a/frontend/src/app/landing/landing.component.html
+++ b/frontend/src/app/landing/landing.component.html
@@ -1,2 +1,112 @@
 <app-navbar></app-navbar>
-Landing page
+<div
+  class="w-full md:h-[480px] bg-landing-banner p-8 bg-cover bg-center rounded-2xl flex flex-col justify-center items-center mt-5"
+>
+  <h1
+    class="font-semibold text-2xl sm:text-4xl md:text-6xl text-center leading-tight"
+  >
+    Kaiteki makes <br />
+    team work <span class="text-primary">simple</span>
+  </h1>
+
+  <p class="mt-5 text-[#5E5E5E] text-xs sm:text-base text-center">
+    Organize your work space with integrative tools
+    <span class="hidden sm:inline"><br /></span>
+    just in one platform
+  </p>
+
+  <div class="mt-8 flex items-center gap-6">
+    <app-button variant="solid">Try for free</app-button>
+    <app-button variant="outline">See pricing</app-button>
+  </div>
+</div>
+
+<div class="flex flex-col items-center mt-12">
+  <div class="rounded-full px-5 py-2 bg-primary/20 text-primary text-sm">
+    Features
+  </div>
+  <div class="mt-4">
+    <h3 class="text-2xl md:text-4xl font-medium text-center leading-tight">
+      Your workplace will never <span class="hidden sm:inline"><br /></span>
+      be the same
+    </h3>
+  </div>
+  <div class="grid grid-cols-2 md:grid-cols-3 gap-4 md:gap-8 mt-8 md:mt-10">
+    <div
+      class="max-w-xs bg-white p-6 rounded-xl border-2 border-gray-200 cursor-pointer hover:shadow-2xl hover:scale-105 hover:-translate-y-3 transition-all duration-200 ease-in-out"
+      *ngFor="let feature of features"
+    >
+      <div class="w-28 h-28 bg-gray-400"></div>
+      <h3 class="mt-6 text-lg md:text-2xl font-semibold">Chatting</h3>
+      <p class="mt-3 font-medium text-xs md:text-sm">
+        Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod
+        tempor.
+      </p>
+    </div>
+  </div>
+</div>
+
+<div class="bg-[#F8F7FE] rounded-2xl p-16 mt-16">
+  <div class="flex justify-center">
+    <p class="rounded-full px-5 py-2 bg-[#e5e2f8] text-[#8170e2] text-sm">
+      Built for everyone
+    </p>
+  </div>
+
+  <div class="mt-4">
+    <h3 class="text-2xl md:text-4xl font-medium text-center leading-tight">
+      Built for teams from <span class="inline md:hidden"><br/></span> 1 to 1,000+
+    </h3>
+  </div>
+
+  <div
+    class="flex flex-col md:flex-row items-center gap-10 md:gap-16 mt-8 md:mt-16"
+  >
+    <div
+      class="w-full lg:w-3/5 order-2 md:order-1 flex flex-col gap-10 md:gap-14"
+    >
+      <div class="flex gap-8">
+        <div
+          class="w-16 h-16 flex-shrink-0 bg-gray-200 rounded-lg shadow-sm"
+        ></div>
+        <div class="flex flex-col gap-2">
+          <h4 class="font-bold text-base md:text-lg">Visualize & Plan</h4>
+          <p class="text-sm md:text-base">
+            Manage any project from start to finish with highly customizable
+            views that make project planning a breeze.
+          </p>
+        </div>
+      </div>
+
+      <div class="flex gap-8">
+        <div
+          class="w-16 h-16 flex-shrink-0 bg-gray-200 rounded-lg shadow-sm"
+        ></div>
+        <div class="flex flex-col gap-2">
+          <h4 class="font-bold text-base md:text-lg">Visualize & Plan</h4>
+          <p class="text-sm md:text-base">
+            Manage any project from start to finish with highly customizable
+            views that make project planning a breeze.
+          </p>
+        </div>
+      </div>
+
+      <div class="flex gap-8">
+        <div
+          class="w-16 h-16 flex-shrink-0 bg-gray-200 rounded-lg shadow-sm"
+        ></div>
+        <div class="flex flex-col gap-2">
+          <h4 class="font-bold text-base md:text-lg">Visualize & Plan</h4>
+          <p class="text-sm md:text-base">
+            Manage any project from start to finish with highly customizable
+            views that make project planning a breeze.
+          </p>
+        </div>
+      </div>
+    </div>
+
+    <div class="w-full max-w-3/5 order-1 md:order-2 h-full">
+      <div class="w-full h-72 bg-gray-200 rounded-lg"></div>
+    </div>
+  </div>
+</div>
