--- a/frontend/src/app/landing/landing.component.html
+++ b/frontend/src/app/landing/landing.component.html
@@ -1,4 +1,4 @@
-<app-navbar></app-navbar>
+<!-- <app-navbar></app-navbar>
 <div
   class="w-full md:h-[480px] bg-landing-banner p-8 bg-cover bg-center rounded-2xl flex flex-col justify-center items-center mt-5"
 >
@@ -109,4 +109,17 @@
       <div class="w-full h-72 bg-gray-200 rounded-lg"></div>
     </div>
   </div>
+</div> -->
+
+<ul class="flex items-center justify-center p-10 bg-gray-100 rounded-full">
+  <li class="bg-purple-400 p-6 rounded-full hover:bg-purple-300">Hello</li>
+  <li class="bg-purple-400 p-6 rounded-full hover:bg-purple-300">Hello</li>
+  <li class="bg-purple-400 p-6 rounded-full hover:bg-purple-300">Hello</li>
+  <li class="bg-purple-400 p-6 rounded-full hover:bg-purple-300">Hello</li>
+  <li class="bg-purple-400 p-6 rounded-full hover:bg-purple-300">Hello</li>
+</ul>
+
+<div class="flex items-center gap-10">
+  <div class="bg-orange-400 w-80 h-80 rounded-lg">Hello World</div>
+  <div class="bg-orange-400 w-80 h-80 rounded-lg">Hello World</div>
 </div>
