test without tailwind

--- a/frontend/src/app/landing/landing.component.html
+++ b/frontend/src/app/landing/landing.component.html
@@ -111,15 +111,15 @@
   </div>
 </div> -->
 
-<ul class="flex items-center justify-center p-10 bg-gray-100 rounded-full">
-  <li class="bg-purple-400 p-6 rounded-full hover:bg-purple-300">Hello</li>
-  <li class="bg-purple-400 p-6 rounded-full hover:bg-purple-300">Hello</li>
-  <li class="bg-purple-400 p-6 rounded-full hover:bg-purple-300">Hello</li>
-  <li class="bg-purple-400 p-6 rounded-full hover:bg-purple-300">Hello</li>
-  <li class="bg-purple-400 p-6 rounded-full hover:bg-purple-300">Hello</li>
+<ul>
+  <li>Hello</li>
+  <li>Hello</li>
+  <li>Hello</li>
+  <li>Hello</li>
+  <li>Hello</li>
 </ul>
 
-<div class="flex items-center gap-10">
-  <div class="bg-orange-400 w-80 h-80 rounded-lg">Hello World</div>
-  <div class="bg-orange-400 w-80 h-80 rounded-lg">Hello World</div>
+<div class="parent">
+  <div>Hello World</div>
+  <div>Hello World</div>
 </div>
