--- a/frontend/src/app/landing/components/navbar/navbar.component.html
+++ b/frontend/src/app/landing/components/navbar/navbar.component.html
@@ -1,35 +1,28 @@
-<header
-  class="sticky top-0 w-full border-b py-6 bg-white"
->
-  <div class="relative flex items-center justify-between">
+<header class="nav__header">
+  <div class="nav__wrapper">
     <div>
-      <p class="font-sarpanch uppercase font-bold text-lg cursor-pointer">
-        Kaiteki
-      </p>
+      <p class="nav__logo">Kaiteki</p>
     </div>
 
-    <ul class="hidden md:flex items-center justify-center gap-8">
+    <ul class="nav__list">
       <a
         *ngFor="let page of navbarPagesArr"
         [routerLink]="[page.link]"
         routerLinkActive="router-link-active"
-        class="cursor-pointer hover:text-primary"
+        class="nav__link"
       >
         {{ page.label }}
       </a>
     </ul>
 
-    <div
-      class="w-full absolute top-12 left-0 md:hidden bg-white p-4 shadow-lg rounded-lg"
-      *ngIf="menuOpen"
-    >
-      <ul class="flex flex-col justify-center bg-gray-50 p-3 rounded-xl">
+    <div class="nav__mobile" *ngIf="menuOpen">
+      <ul class="nav__mobile-wrapper">
         <a
           *ngFor="let page of navbarPagesArr"
           [routerLink]="[page.link]"
           routerLinkActive="router-link-active"
-          class="cursor-pointer hover:text-primary px-5 py-3 rounded-lg font-medium"
-          [ngClass]="{ 'bg-primary text-white': false }"
+          class="nav__mobile-link"
+          [ngClass]="{ 'nav__mobile-link-active': false }"
         >
           {{ page.label }}
         </a>
@@ -37,36 +30,34 @@
         <a
           [routerLink]="[navbarPages['sales'].link]"
           routerLinkActive="router-link-active"
-          class="cursor-pointer hover:text-primary px-5 py-3 rounded-lg font-medium"
-          [ngClass]="{ 'bg-primary text-white': false }"
+          class="nav__mobile-link"
+          [ngClass]="{ 'nav__mobile-link-active': false }"
         >
           {{ navbarPages["sales"].label }}
         </a>
       </ul>
     </div>
 
-    <div class="flex items-center justify-center gap-5 md:gap-8">
+    <div class="nav__right">
       <a
         [routerLink]="[navbarPages['sales'].link]"
         routerLinkActive="router-link-active"
-        class="hidden md:inline cursor-pointer hover:text-primary"
+        class="nav__right-link"
       >
         {{ navbarPages["sales"].label }}
       </a>
       <app-button variant="solid">Get started</app-button>
-      <button class="md:hidden flex items-center justify-center" (click)="onToggleMenu()">
-        <ng-icon
+      <button class="nav__right-menu" (click)="onToggleMenu()">
+        <tui-svg
           *ngIf="!menuOpen"
-          name="matMenuRound"
-          size="32"
-          class="text-gray-700"
-        ></ng-icon>
-        <ng-icon
+          src="tuiIconMenu"
+          class="nav__icon"
+        ></tui-svg>
+        <tui-svg
           *ngIf="menuOpen"
-          name="matCloseRound"
-          size="32"
-          class="text-gray-700"
-        ></ng-icon>
+          src="tuiIconClose"
+          class="nav__icon"
+        ></tui-svg>
       </button>
     </div>
   </div>
