--- a/frontend/src/app/layouts/landing-layout/landing-layout.component.html
+++ b/frontend/src/app/layouts/landing-layout/landing-layout.component.html
@@ -1,6 +1,3 @@
-<main
-  class="container relative px-4 mx-auto w-full min-h-screen 
-    bg-white font-poppins text-sm md:text-base pb-5"
->
+<main class="container">
   <router-outlet></router-outlet>
 </main>
