--- a/frontend/src/app/shared/ui/button/button.component.html
+++ b/frontend/src/app/shared/ui/button/button.component.html
@@ -1,3 +1,3 @@
-<button class="px-6 py-2 rounded-lg" [class]="variantClass">
+<button class="button" [class]="variantClass">
   <ng-content></ng-content>
 </button>
