Created primary layout

--- a/frontend/src/app/layouts/primary-layout/primary-layout.component.html
+++ b/frontend/src/app/layouts/primary-layout/primary-layout.component.html
@@ -1,3 +1,7 @@
-<main class="min-h-screen bg-blue-200">
+<div class="container">
+  <app-sidebar></app-sidebar>
+
+  <main class="content">
     <router-outlet></router-outlet>
-</main>
+  </main>
+</div>
