--- a/frontend/src/styles.scss
+++ b/frontend/src/styles.scss
@@ -10,6 +10,29 @@
 :root {
   --tui-base-01: white;
   --tui-primary: #525fe1;
+  --tui-text-font: "Poppins", sans-serif;
+  --tui-font-text-l: none;
+  --tui-autofill: none;
+  --tui-disabled-opacity: none;
+  --tui-font-heading: none;
+  --tui-font-text: "Poppins", sans-serif;
+  --tui-height-l: none;
+  --tui-height-m: none;
+  --tui-font-heading-1: none;
+  --tui-font-heading-2: none;
+  --tui-font-heading-3: none;
+  --tui-font-heading-4: none;
+  --tui-font-heading-5: none;
+  --tui-font-heading-6: none;
+  --tui-font-text-xl: none;
+  --tui-font-text-l: none;
+  --tui-font-text-l-2: none;
+  --tui-font-text-m: none;
+  --tui-font-text-m-2: none;
+  --tui-font-text-s: none;
+  --tui-font-text-s-2: none;
+  --tui-font-text-xs: none;
+  --tui-text-01: none;
 }
 
 // CSS NULLER
