--- a/frontend/src/assets/styles/_vars.scss
+++ b/frontend/src/assets/styles/_vars.scss
@@ -13,9 +13,9 @@ $breakpoints: (
 );
 
 //Colors
-$primary: #525ee0;
+$primary: #4752d1;
 $primary-dark: #28104e;
-$primary-light: #525ee033;
+$primary-light: #525ee01c;
 
 //Font Sizes
 $text-base: 16px;
@@ -28,3 +28,4 @@ $text-3xl: 30px;
 $text-4xl: 36px;
 $text-5xl: 48px;
 $text-6xl: 60px;
+
