Developed main navbar

--- a/frontend/src/app/layouts/primary-layout/primary-layout.component.scss
+++ b/frontend/src/app/layouts/primary-layout/primary-layout.component.scss
@@ -6,13 +6,17 @@
   font-family: "Poppins", sans-serif;
   font-size: $text-sm;
   color: black;
+  background: rgb(255, 255, 255);
 
   @media (min-width: $md) {
     font-size: $text-base;
   }
 }
 
-.content {
+.content__wrapper {
   flex: 1;
-  padding: 30px;
+}
+
+.content {
+  padding: 16px 30px;
 }
