--- a/frontend/src/app/layouts/landing-layout/landing-layout.component.scss
+++ b/frontend/src/app/layouts/landing-layout/landing-layout.component.scss
@@ -6,6 +6,8 @@
   font-family: "Poppins", sans-serif;
   font-size: $text-sm;
   color: black;
+  background: rgb(255, 255, 255);
+
 
   @media (min-width: $md) {
     font-size: $text-base;
