--- a/frontend/src/app/layouts/primary-layout/components/sidebar/sidebar.component.scss
+++ b/frontend/src/app/layouts/primary-layout/components/sidebar/sidebar.component.scss
@@ -7,10 +7,11 @@
   display: flex;
   flex-direction: column;
   justify-content: space-between;
-  padding: 30px 10px;
+  padding: 20px 10px;
   border-right: 2px solid #f2f2f2;
   -ms-overflow-style: none;
   scrollbar-width: none;
+  background: #f9fafc;
 
   &::-webkit-scrollbar {
     display: none;
@@ -27,7 +28,7 @@
 
   &__nav {
     &-list {
-      margin-top: 36px;
+      margin-top: 26px;
       display: flex;
       flex-direction: column;
       gap: 6px;
