--- a/frontend/src/app/layouts/primary-layout/primary-layout.component.html
+++ b/frontend/src/app/layouts/primary-layout/primary-layout.component.html
@@ -1,7 +1,10 @@
 <div class="container">
   <app-sidebar></app-sidebar>
 
-  <main class="content">
-    <router-outlet></router-outlet>
-  </main>
+  <div class="content__wrapper">
+    <app-navbar></app-navbar>
+    <main class="content">
+      <router-outlet></router-outlet>
+    </main>
+  </div>
 </div>
