--- a/frontend/src/app/layouts/primary-layout/components/navbar/navbar.component.scss
+++ b/frontend/src/app/layouts/primary-layout/components/navbar/navbar.component.scss
@@ -4,18 +4,18 @@
   display: flex;
   align-items: center;
   justify-content: space-between;
-  padding: 16px 30px;
-  border-bottom: 2px solid #f2f2f2;
+  padding: 10px 22px;
+  // border-bottom: 2px solid #f2f2f2;
 
   &__header {
     font-weight: 600;
-    font-size: 18px;
+    font-size: 22px;
   }
 
   &__right {
     display: flex;
     align-items: center;
-    gap: 28px;
+    gap: 12px;
   }
 
   &__notification {
@@ -53,4 +53,79 @@
 tui-svg {
   cursor: pointer;
   font-size: 16px;
+}
+
+.avatar {
+  &-wrapper {
+    display: flex;
+    align-items: center;
+    gap: 12px;
+    cursor: pointer;
+    padding: 6px 10px;
+    border-radius: 10px;
+
+    &:hover {
+      background: #f7f6f6;
+    }
+  }
+
+  &-img {
+    width: 34px;
+    height: 34px;
+    border-radius: 9999px;
+    object-fit: cover;
+  }
+
+  &-icon {
+    cursor: pointer;
+    font-size: 12px;
+    color: #494949;
+  }
+
+  &-label {
+    font-size: 14px;
+  }
+}
+
+.notification {
+  padding: 10px 10px;
+
+  &-list {
+    display: flex;
+    flex-direction: column;
+    gap: 2px;
+    font-family: "Poppins", sans-serif;
+  }
+
+  &-item {
+    display: flex;
+    align-items: center;
+    gap: 6px;
+    font-size: 14px;
+    padding: 6px 4px;
+    cursor: pointer;
+    border-radius: 8px;
+
+    &:hover {
+      background: #eeeded;
+    }
+
+    &-label {
+    }
+
+    &-icon {
+      font-size: 10px;
+      color: #4b4b4b;
+    }
+  }
+}
+
+.bg-icon {
+  background: #eeeeee;
+  padding: 4px 6px;
+  border-radius: 14px;
+}
+
+.bell-icon {
+  font-size: 14px;
 }
