--- a/frontend/src/app/layouts/primary-layout/components/sub-menu/sub-menu.component.scss
+++ b/frontend/src/app/layouts/primary-layout/components/sub-menu/sub-menu.component.scss
@@ -42,6 +42,17 @@
   }
 }
 
+.collapsed-menu {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  padding: 8px 12px;
+}
+
+.collapsed-dropdown {
+  padding: 0px;
+}
+
 .active {
   &__wrapper {
     background: $primary-light;
