--- a/frontend/src/app/layouts/teams-layout/components/navbar/navbar.component.scss
+++ b/frontend/src/app/layouts/teams-layout/components/navbar/navbar.component.scss
@@ -9,6 +9,12 @@
   display: flex;
   align-items: center;
   gap: 22px;
+
+  @media (max-width: $sm) {
+    overflow-y: hidden;
+    overflow-x: auto;
+    gap: 12px;
+  }
 }
 
 .item {
