--- a/frontend/src/app/layouts/primary-layout/components/sidebar/sidebar.component.html
+++ b/frontend/src/app/layouts/primary-layout/components/sidebar/sidebar.component.html
@@ -20,7 +20,7 @@
         [class.collapsed-link]="collapsed"
         [routerLinkActive]="['sidebar__nav-item-active']"
         [routerLinkActiveOptions]="{ exact: false }"
-        [routerLink]="page.link"
+        [routerLink]="[page.link]"
         tuiHintAppearance="onDark"
         tuiHintDirection="right"
         [tuiHintShowDelay]="100"
