--- a/frontend/src/styles.scss
+++ b/frontend/src/styles.scss
@@ -8,6 +8,7 @@
 @import "./assets/styles/_vars.scss";
 
 :root {
+  --tui-text-02: #000000;
   --tui-base-01: #ffffff;
   --tui-primary: #525fe1;
   --tui-text-font: "Poppins", sans-serif;
