--- a/frontend/src/app/layouts/primary-layout/components/mobile-sidebar/mobile-sidebar.component.html
+++ b/frontend/src/app/layouts/primary-layout/components/mobile-sidebar/mobile-sidebar.component.html
@@ -1,37 +1,50 @@
-<div class="sidebar" *tuiSidebar="state; direction: 'left'">
-  <div class="sidebar__top">
-    <div class="logo-wrapper">
-      <h1 class="sidebar__logo">KAITEKI</h1>
-    </div>
+<button
+  type="button"
+  (click)="toggleMobileSidebar(true)"
+  (tuiActiveZoneChange)="toggleMobileSidebar($event)"
+>
+  <tui-svg src="tuiIconMenuLarge" class="icon"></tui-svg>
 
-    <ul class="sidebar__nav-list">
-      <li
-        *ngFor="let page of sidebarPages"
-        class="sidebar__nav-item"
-        [routerLinkActive]="['sidebar__nav-item-active']"
-        [routerLinkActiveOptions]="{ exact: false }"
-        [routerLink]="page.link"
-      >
-        <tui-svg class="sidebar__nav-item-icon" [src]="page.icon"></tui-svg>
-        <p class="sidebar__nav-item-label">
-          {{ page.label }}
-        </p>
-      </li>
+  <div *tuiSidebar="open" class="sidebar">
+    <div class="sidebar__top">
+      <div class="logo-wrapper">
+        <h1 class="sidebar__logo">KAITEKI</h1>
+        <tui-svg
+          class="toggle-icon"
+          src="tuiIconMenuLarge"
+          (click)="toggleMobileSidebar(false)"
+        ></tui-svg>
+      </div>
 
-      <app-sub-menu label="Teams" headerIcon="tuiIconUsersLarge" link="teams">
-        <div
-          *ngFor="let team of teams"
+      <ul class="sidebar__nav-list">
+        <li
+          *ngFor="let page of sidebarPages"
           class="sidebar__nav-item"
-          [class]="{ 'sidebar__nav-item-active': false }"
           [routerLinkActive]="['sidebar__nav-item-active']"
           [routerLinkActiveOptions]="{ exact: false }"
-          [routerLink]="['teams', team.name]"
+          [routerLink]="page.link"
         >
+          <tui-svg class="sidebar__nav-item-icon" [src]="page.icon"></tui-svg>
           <p class="sidebar__nav-item-label">
-            {{ team.name }}
+            {{ page.label }}
           </p>
-        </div>
-      </app-sub-menu>
-    </ul>
+        </li>
+
+        <app-sub-menu label="Teams" headerIcon="tuiIconUsersLarge" link="teams">
+          <div
+            *ngFor="let team of teams"
+            class="sidebar__nav-item"
+            [class]="{ 'sidebar__nav-item-active': false }"
+            [routerLinkActive]="['sidebar__nav-item-active']"
+            [routerLinkActiveOptions]="{ exact: false }"
+            [routerLink]="['teams', team.name]"
+          >
+            <p class="sidebar__nav-item-label">
+              {{ team.name }}
+            </p>
+          </div>
+        </app-sub-menu>
+      </ul>
+    </div>
   </div>
-</div>
+</button>
