--- a/frontend/src/app/layouts/primary-layout/components/navbar/navbar.component.html
+++ b/frontend/src/app/layouts/primary-layout/components/navbar/navbar.component.html
@@ -1,14 +1,6 @@
 <div class="navbar">
   <div class="navbar__left">
-    <button
-      type="button"
-      class="navbar__mobile-toggle"
-      (click)="toggleMobileSidebar(true)"
-      (tuiActiveZoneChange)="toggleMobileSidebar($event)"
-    >
-      <tui-svg src="tuiIconMenuLarge"></tui-svg>
-      <app-mobile-sidebar [state]="mobileSidebarOpen"></app-mobile-sidebar>
-    </button>
+    <app-mobile-sidebar class="navbar__mobile-toggle"></app-mobile-sidebar>
     <h1 class="navbar__header">{{ header | async }}</h1>
   </div>
   <div class="navbar__right">
