Created posts UI, changed main color

--- a/frontend/src/app/shared/ui/button/button.component.html
+++ b/frontend/src/app/shared/ui/button/button.component.html
@@ -1,3 +1,4 @@
 <button class="button" [class]="variantClass">
+  <mat-icon class="button__icon" *ngIf="icon">{{ icon }}</mat-icon>
   <ng-content></ng-content>
 </button>
