--- a/frontend/src/app/teams/submodules/meetings/pages/meetings/meetings.component.html
+++ b/frontend/src/app/teams/submodules/meetings/pages/meetings/meetings.component.html
@@ -1,1 +1,9 @@
-<p>meetings works!</p>
+<div class="wrapper">
+    <div>
+        <div></div>
+
+        <div></div>
+    </div>
+
+    <div>Meetings</div>
+</div>
