--- a/frontend/src/assets/styles/_vars.scss
+++ b/frontend/src/assets/styles/_vars.scss
@@ -13,25 +13,26 @@ $breakpoints: (
 );
 
 //Colors
-$primary: #4752d1;
-$primary-dark: #28104e;
-$primary-light: #525ee01c;
+// $primary: #4752d1;
+$primary: #0844f4;
+$primary-dark: #042d69;
+$primary-light: #dae5f1;
 
 $kaiteki-primary-palette: (
-  50: #4752d1,
-  100: #4752d1,
-  200: #4752d1,
-  300: #4752d1,
-  400: #4752d1,
-  500: #4752d1,
-  600: #4752d1,
-  700: #4752d1,
-  800: #4752d1,
-  900: #4752d1,
-  A100: #4752d1,
-  A200: #4752d1,
-  A400: #4752d1,
-  A700: #4752d1,
+  50: #83a1f9,
+  100: #6a8ef8,
+  200: #527cf7,
+  300: #3969f6,
+  400: #2056f5,
+  500: #0844f4,
+  600: #073ddb,
+  700: #0636c3,
+  800: #052faa,
+  900: #042892,
+  A100: #6a8ef8,
+  A200: #527cf7,
+  A400: #2056f5,
+  A700: #0636c3,
   contrast: (
     50: rgba(black, 0.87),
     100: rgba(black, 0.87),
@@ -41,20 +42,20 @@ $kaiteki-primary-palette: (
 );
 
 $kaiteki-accent-palette: (
-  50: #4752d1,
-  100: #4752d1,
-  200: #4752d1,
-  300: #4752d1,
-  400: #4752d1,
-  500: #4752d1,
-  600: #4752d1,
-  700: #4752d1,
-  800: #4752d1,
-  900: #4752d1,
-  A100: #4752d1,
-  A200: #4752d1,
-  A400: #4752d1,
-  A700: #4752d1,
+  50: #83a1f9,
+  100: #6a8ef8,
+  200: #527cf7,
+  300: #3969f6,
+  400: #2056f5,
+  500: #0844f4,
+  600: #073ddb,
+  700: #0636c3,
+  800: #052faa,
+  900: #042892,
+  A100: #6a8ef8,
+  A200: #527cf7,
+  A400: #2056f5,
+  A700: #0636c3,
   contrast: (
     50: rgba(black, 0.87),
     100: rgba(black, 0.87),
