--- a/frontend/src/app/shared/ui/button/button.component.scss
+++ b/frontend/src/app/shared/ui/button/button.component.scss
@@ -1,11 +1,22 @@
+@import "vars";
+
 .button {
   padding: 0.5rem 1.5rem;
   border-radius: 0.375rem;
+  display: flex;
+  align-items: center;
+  gap: 8px;
+
+  &__icon {
+    font-size: 18px;
+    width: 18px;
+    height: 18px;
+  }
 }
 
 .variant {
   &-solid {
-    background-color: var(--tui-primary);
+    background-color: $primary;
     color: #fafafa;
   }
 
