--- a/frontend/src/app/layouts/primary-layout/components/sidebar/sidebar.component.scss
+++ b/frontend/src/app/layouts/primary-layout/components/sidebar/sidebar.component.scss
@@ -17,7 +17,6 @@
   border-right: 2px solid #f2f2f2;
   -ms-overflow-style: none;
   scrollbar-width: none;
-  background: #f6f8f9;
 
   @media (max-width: $sm) {
     display: none;
@@ -49,9 +48,9 @@
       align-items: center;
       cursor: pointer;
       gap: 12px;
-      color: #303030;
-      padding: 8px 20px;
-      border-radius: 14px;
+      color: #4f5258;
+      padding: 10px 20px;
+      border-radius: 8px;
 
       &:hover {
         background: #f1f1f1;
@@ -62,12 +61,12 @@
       }
 
       &-active {
-        color: $primary;
-        background: $primary-light;
+        color: #ffff;
+        background: $primary;
         font-weight: 500;
 
         &:hover {
-          color: $primary;
+          color: #ffff;
           background: $primary-light;
         }
       }
