--- a/frontend/src/app/layouts/primary-layout/components/sub-menu/sub-menu.component.html
+++ b/frontend/src/app/layouts/primary-layout/components/sub-menu/sub-menu.component.html
@@ -1,6 +1,6 @@
 <div
   class="menu"
-  [class.active__wrapper]="active"
+  [class.active]="active"
   [class.collapsed-menu]="collapsed"
   (click)="onExpandedToggle($event)"
 >
