--- a/frontend/src/app/teams/submodules/chats/components/chats-sidebar/chats-sidebar.component.scss
+++ b/frontend/src/app/teams/submodules/chats/components/chats-sidebar/chats-sidebar.component.scss
@@ -8,6 +8,7 @@
   -ms-overflow-style: none;
   scrollbar-width: none;
   display: none;
+  background: #ffffff;
 
   &::-webkit-scrollbar {
     display: none;
