--- a/frontend/src/app/teams/submodules/tasks/components/kanban-column/kanban-column.component.html
+++ b/frontend/src/app/teams/submodules/tasks/components/kanban-column/kanban-column.component.html
@@ -1,6 +1,8 @@
 <div class="column">
-  <div class="column-title">
-    {{ column.label }}
+  <div>
+    <div class="column-title">
+      {{ column.label }}
+    </div>
   </div>
   <div
     class="tasks-container"
