--- a/frontend/src/app/teams/submodules/tasks/components/tasks-filter/tasks-filter.component.scss
+++ b/frontend/src/app/teams/submodules/tasks/components/tasks-filter/tasks-filter.component.scss
@@ -10,15 +10,15 @@
   }
 
   &__item {
-    display: flex;
-    align-items: center;
-    gap: 0.4rem;
-    padding: 0.2rem 1rem;
-    background: #f6f8f9;
-    border: 1px solid #eaebec;
-    border-radius: 14px;
-    cursor: pointer;
-    font-size: 14px;
+    // display: flex;
+    // align-items: center;
+    // gap: 0.4rem;
+    // padding: 0.2rem 1rem;
+    // background: #f6f8f9;
+    // border: 1px solid #eaebec;
+    // border-radius: 8px;
+    // cursor: pointer;
+    // font-size: 14px;
 
     &-icon {
     }
