--- a/frontend/src/assets/styles/_vars.scss
+++ b/frontend/src/assets/styles/_vars.scss
@@ -13,10 +13,9 @@ $breakpoints: (
 );
 
 //Colors
-// $primary: #4752d1;
-$primary: #0844f4;
+$primary: #0067ff;
 $primary-dark: #042d69;
-$primary-light: #dae5f1;
+$primary-light: #4c81ff;
 
 $kaiteki-primary-palette: (
   50: #83a1f9,
