--- a/frontend/src/app/layouts/primary-layout/components/navbar/navbar.component.scss
+++ b/frontend/src/app/layouts/primary-layout/components/navbar/navbar.component.scss
@@ -5,6 +5,7 @@
   align-items: center;
   justify-content: space-between;
   padding: 10px 22px;
+  background: #ffffff;
 
   @media (max-width: $sm) {
     padding: 8px;
