--- a/frontend/src/app/notes/components/notes-sidebar/notes-sidebar.component.html
+++ b/frontend/src/app/notes/components/notes-sidebar/notes-sidebar.component.html
@@ -2,13 +2,25 @@
   <form [formGroup]="searchForm" class="sidebar__search">
     <input placeholder="Search" class="sidebar__search-input" type="text" />
   </form>
-  <div class="sidebar__list">
+  <div class="sidebar__list desktop">
     <div
       *ngFor="let note of notes; let i = index"
       class="sidebar__item"
       [class.sidebar__item-active]="i === 1"
+      (click)="onSelectNote(note)"
     >
-      <div>{{ note }}</div>
+      <div>{{ note.title }}</div>
+    </div>
+  </div>
+
+  <div class="sidebar__list mobile">
+    <div
+      *ngFor="let note of notes; let i = index"
+      class="sidebar__item"
+      [class.sidebar__item-active]="i === 1"
+      [routerLink]="note.id"
+    >
+      <div>{{ note.title }}</div>
     </div>
   </div>
 </aside>
