--- a/frontend/src/app/teams/components/navbar/navbar.component.scss
+++ b/frontend/src/app/teams/components/navbar/navbar.component.scss
@@ -1,48 +1,13 @@
 @import "vars";
 
-// .wrapper {
-//   padding: 0px 16px 16px;
-//   border-bottom: 2px solid #f2f2f2;
-// }
-
-// .list {
-//   display: flex;
-//   align-items: center;
-//   gap: 8px;
-// }
-
-// .item {
-//   position: relative;
-//   display: flex;
-//   align-items: center;
-//   gap: 6px;
-//   font-size: 12px;
-//   padding: 4px 12px;
-//   cursor: pointer;
-//   border-radius: 4px;
-
-//   &:hover {
-//     background: #eeeeee;
-//   }
-
-//   &-icon {
-//     font-size: 12px;
-//   }
-
-//   &-active {
-//     font-weight: 600;
-//     background: $primary-light;
-//     color: $primary;
-//   }
-// }
-
 .wrapper {
   width: 100%;
   display: flex;
-  margin-top: 6px;
   align-items: center;
   gap: 12px;
+  padding-top: 6px;
   border-bottom: 1px solid #e4e4e4;
+  background: #ffffff;
 }
 
 .item {
