--- a/frontend/src/app/teams/submodules/chats/components/chats-message/chats-message.component.scss
+++ b/frontend/src/app/teams/submodules/chats/components/chats-message/chats-message.component.scss
@@ -32,8 +32,8 @@
   &__body {
     margin-top: 6px;
     padding: 8px 16px;
-    background: $primary-light;
     border-radius: 10px;
+    background: #e6e6e6;
   }
 }
 
@@ -44,7 +44,8 @@
   }
 
   &__body {
-    background: #e9e9e9;
+    background: #417EED;
+    color: #ffff;
   }
 }
 
