--- a/frontend/src/app/teams/submodules/tasks/components/kanban-column/kanban-column.component.scss
+++ b/frontend/src/app/teams/submodules/tasks/components/kanban-column/kanban-column.component.scss
@@ -2,25 +2,32 @@
   display: flex;
   flex-direction: column;
   flex-grow: 1;
-  height: 75vh;
+  height: calc(100vh - 220px);
 
   width: 100%;
-  width: 300px;
-  padding: 1rem;
+  width: 340px;
 
-  border-radius: 14px;
-  background: #f6f8f9;
+  border-radius: 6px;
+  border: 1px solid #e5e6eb;
+  // background: #ffffff;
 }
 
 .column-title {
-  font-size: 14px;
-  margin-bottom: 20px;
+  background: #ffffff;
+  font-size: 16px;
+  padding: 1rem;
   font-weight: 600;
+  border-radius: 6px 6px 0px 0px;
+  border-bottom: 2px solid #263fb9;
+
+  // text-transform: uppercase;
+  // border-radius: 10px;
 }
 
 .tasks-container {
   flex-grow: 1;
   overflow-y: auto;
+  padding: 12px 12px;
 }
 
 .cdk-drag-preview {
