--- a/frontend/src/app/teams/submodules/tasks/components/kanban-item/kanban-item.component.scss
+++ b/frontend/src/app/teams/submodules/tasks/components/kanban-item/kanban-item.component.scss
@@ -1,13 +1,11 @@
 .task {
   cursor: pointer;
   display: flex;
-  padding: 15px 12px;
-  background: white;
-  border-bottom: solid 1px #ddd;
-  border-radius: 4px;
+  padding: 1rem;
   margin-bottom: 15px;
-  box-shadow: 0 5px 5px -3px rgba(0, 0, 0, 0.05),
-    0 3px 14px 2px rgba(0, 0, 0, 0.05);
+  background: #ffffff;
+  border: 1px solid #e5e6eb;
+  border-radius: 6px;
 }
 
 .cdk-drag-preview {
