--- a/frontend/src/app/teams/submodules/tasks/components/tasks-filter/tasks-filter.component.html
+++ b/frontend/src/app/teams/submodules/tasks/components/tasks-filter/tasks-filter.component.html
@@ -1,23 +1,23 @@
 <div class="filter">
   <div class="filter__left">
-    <div class="filter__item">
+    <button mat-stroked-button class="filter__item">
       <mat-icon class="filter__item-icon">grid_view</mat-icon>
       <p>All tasks</p>
-    </div>
-    <div class="filter__item">
+    </button>
+    <button mat-stroked-button class="filter__item">
       <mat-icon class="filter__item-icon">filter_list</mat-icon>
       <p>Filter</p>
-    </div>
-    <div class="filter__item">
+    </button>
+    <button mat-stroked-button class="filter__item">
       <mat-icon class="filter__item-icon">wysiwyg</mat-icon>
       <p>View</p>
-    </div>
+    </button>
   </div>
 
   <div class="filter__right">
-    <div class="filter__item">
-      <mat-icon class="filter__item-icon" src="tuiIconSettingsLarge"></mat-icon>
-      <p>Customize</p>
-    </div>
+    <button mat-stroked-button class="filter__item">
+      <mat-icon class="filter__item-icon">settings</mat-icon>
+      <p>Edit</p>
+    </button>
   </div>
 </div>
